--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+<h1>EU Support</h1>
+<p>Predicting EU support with the European Values Study.</p>
+</body>
+</html>
